[gd_scene load_steps=9 format=3 uid="uid://77vnvy7vrde5"]

[ext_resource type="Script" path="res://components/toast_message.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dg530t8lqr5n4" path="res://components/assets/close.svg" id="2"]
[ext_resource type="Texture2D" uid="uid://cvd4iqure87t1" path="res://components/assets/close_hover.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://4lwkro5ti0uy" path="res://components/assets/close_pressed.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://dtwlwt8ua5j2h" path="res://components/assets/error.svg" id="6"]

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.0470588, 0.0470588, 0.0470588, 0.941176)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
corner_detail = 10

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([null])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/27/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/28/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/29/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/31/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/33/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/34/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/34/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_xlkdx"]
font_size = 34

[node name="ToastMessage" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("2")

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Container" type="HBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Icon" type="TextureRect" parent="Panel/Margin/Container"]
modulate = Color(0.886275, 0.623529, 0.211765, 1)
layout_mode = 2
texture = ExtResource("6")

[node name="Label" type="Label" parent="Panel/Margin/Container"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.886275, 0.623529, 0.211765, 1)
theme_override_fonts/font = SubResource("1")
text = "This is a Message"
label_settings = SubResource("LabelSettings_xlkdx")
max_lines_visible = 3

[node name="CloseButton" type="TextureButton" parent="Panel/Margin/Container"]
layout_mode = 2
texture_normal = ExtResource("2")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("3")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Panel/Margin/Container/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
